# ITMO_ICT_WebDevelopment_tools_2025-2026

./: 404.html  index.html
auth/: index.html
db/: index.html
students/k3339/Malakhov_Alexey/: pyproject.toml
students/k3339/Malakhov_Alexey/Lr1/: .gitignore  TASK.md  pyproject.toml  pyrightconfig.json
students/k3339/Malakhov_Alexey/Lr1/Pr1/: main.py
students/k3339/Malakhov_Alexey/Lr1/Pr2/: main.py
students/k3339/Malakhov_Alexey/Lr1/Pr2/models/: __init__.py  schedule.py
students/k3339/Malakhov_Alexey/Lr1/practice/Pr2/: connection.py  docker-compose.yml  models.py
students/k3339/Malakhov_Alexey/Lr1/practice/Pr2/models/: notification.py  tag.py  task.py  task_status_history.py
students/k3339/Malakhov_Alexey/Lr1/practice/Pr3/: main.py
students/k3339/Malakhov_Alexey/Lr1/practice/Pr3/migrations/: env.py
students/k3339/Malakhov_Alexey/Lr1/src/: main.py  security.py
students/k3339/Malakhov_Alexey/Lr1/src/auth/: models.py  router.py
students/k3339/Malakhov_Alexey/Lr1/src/categories/: models.py  router.py
students/k3339/Malakhov_Alexey/Lr1/src/db/: __init__.py  connection.py
students/k3339/Malakhov_Alexey/Lr1/src/migrations/: env.py
students/k3339/Malakhov_Alexey/Lr1/src/notifications/: models.py  router.py
students/k3339/Malakhov_Alexey/Lr1/src/schedules/: models.py  router.py
students/k3339/Malakhov_Alexey/Lr1/src/tags/: models.py  router.py
students/k3339/Malakhov_Alexey/Lr1/src/tasks/: history_models.py  models.py  router.py  task_tag_models.py
students/k3339/Malakhov_Alexey/Lr1/src/users/: dependencies.py  models.py  router.py
(+12 files in other folders)
